// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a default table 1`] = `
<table
  className="table"
  data-table-padded={true}
>
  <tbody
    className="body"
  />
</table>
`;

exports[`should render a table with refCallback 1`] = `
<table
  className="table"
  data-table-padded={true}
>
  <tbody
    className="body"
  />
</table>
`;

exports[`should render a table without padding 1`] = `
<table
  className="table"
  data-table-padded={false}
>
  <tbody
    className="body"
  />
</table>
`;
